fixes timeline on mobile

--- a/sites/all/themes/slac/css/style.css
+++ b/sites/all/themes/slac/css/style.css
@@ -10718,8 +10718,8 @@ a[href^="https://www-internal"]:after, a[href^="https://www-internal"]:hover:aft
     margin-bottom: 15px;
     /* margin-right: 2%; */
     /* margin-left: 2%; */
-    min-width: 21.8rem;
-    max-width: 21.8rem; } }
+    min-width: 15.8rem;
+    max-width: 15.8rem; } }
 
 @media (min-width: 961px) {
   .card-deck .card {
@@ -10736,7 +10736,7 @@ a[href^="https://www-internal"]:after, a[href^="https://www-internal"]:hover:aft
     margin: 0 auto;
     margin-bottom: 15px; } }
 
-@media (max-width: 768px) {
+@media (max-width: 960px) {
   .card-deck {
     margin: 0 auto; } }
 
